# eigen_aocl_test

./: CMakeLists.txt
Eigen/src/Core/: AOCL_Support.h  Assign_AOCL.h
bench/: CMakeLists.txt  Makefile.aocl  benchmark_aocl.cpp
cmake/: FindAOCL.cmake  FindStandardMathLibrary.cmake
doc/: Manual.dox  UsingAOCL.dox
scripts/: build_aocl_example.sh
src/: benchmark_aocl.cpp
